--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,8 @@
         <h1><a href="" class="title"> Spring Blog</a></h1>
       </div> <!-- Title -->
       <div class="col-md-6" *ngIf="isAuthenticated()">
-        <a href="/add-post" class="new-post">Add Post</a>
+        <button class="linkAfterLogin btn btn-default" (click)="logout()">Logout</button>
+        <a href="/add-post" class="linkAfterLogin">Add Post</a>
       </div>
       <div class="col-md-6" *ngIf="!isAuthenticated()">
         <a href="/login" class="login btn btn-default">Login</a>
